fix: fix font issue, fix css file style problem
1. Add other fonts after Dosis font.
2. Fix some style problem in css file.
3. Fix money name that shows too wide.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,8 @@
-@import 'base_color';
+@import "base_color";
 $left-sidebar-width: 178px;
-$font-pingfang: 'PingFang SC', 'Microsoft YaHei', 'Helvetica Neue', Helvetica,
+$font-pingfang: "PingFang SC", "Microsoft YaHei", "Helvetica Neue", Helvetica,
   Arial, sans-serif;
+
 %nav-active {
   box-shadow: 0 0 50px #eaeaea;
   border-radius: 3px;
@@ -26,21 +27,26 @@ body {
 .sidebar {
   width: $left-sidebar-width;
   height: 100%;
+
   .main-nav {
     text-align: center;
+
     .avatar {
       padding: 60px 0;
       margin-bottom: 49px;
       border-bottom: 1px solid #f4f4f4;
+
       img {
         width: 49px;
         border-radius: 100%;
       }
     }
+
     ul {
       list-style: none;
       padding: 0;
       margin-top: 80px;
+
       li {
         width: 50px;
         height: 50px;
@@ -48,22 +54,27 @@ body {
         box-sizing: content-box;
         cursor: pointer;
         transition: all 0.3s ease;
+
         svg {
           width: 20px;
           height: auto;
           position: relative;
           top: 50%;
           transform: translateY(-50%);
+
           path {
             fill: $iconColor;
           }
         }
       }
+
       li:hover {
         @extend %nav-active;
       }
+
       .active {
         @extend %nav-active;
+
         svg {
           path {
             fill: $iconActiveColor;
@@ -77,9 +88,10 @@ body {
 // 主栏
 .main-panel {
   background-color: $bgColor;
+
   .panel-container {
     min-width: 1288px;
-    max-width: 1500px;
+    max-width: 1600px;
     margin: 50px auto;
     padding: 0 20px;
     display: flex;
@@ -87,32 +99,39 @@ body {
     justify-content: center;
   }
 }
+
 // 第一栏
 .first-area {
   min-height: 210px;
   display: flex;
+
   .item {
     margin-right: 45px;
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 0 20px #f8f8f8;
   }
+
   .item:last-child {
     margin-right: 0;
   }
+
   // 时间卡片
   .item-time {
     width: 30%;
     max-width: 439px;
     position: relative;
+
     .time-container {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+
       .item-time_data:first-child {
         margin-bottom: 20px;
       }
+
       h2 {
         margin-bottom: 10px;
         color: #b9b9b9;
@@ -120,12 +139,14 @@ body {
         font-size: 20px;
         font-weight: normal;
       }
+
       h3 {
         font-family: $font-dosis;
         font-size: 30px;
         font-weight: normal;
         letter-spacing: 3px;
         text-transform: capitalize;
+
         span {
           margin-left: 15px;
           color: #c8c8c8;
@@ -134,6 +155,7 @@ body {
       }
     }
   }
+
   // 汇率卡片
   .item-exchange {
     width: 50%;
@@ -141,40 +163,55 @@ body {
     display: flex;
     justify-content: space-between;
     user-select: none;
+
     .item-exchange_money {
       width: 135px;
       margin-right: 10px;
       position: relative;
+
       .money-container {
         min-width: 91px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        h2 {
-          font-family: $font-pingfang;
-          font-size: 18px;
-          font-weight: bold;
-          letter-spacing: 1px;
-        }
-        .percent {
-          margin-bottom: 10px;
-          svg {
-            width: 15px;
-            vertical-align: middle;
+
+        .moneyName-container {
+          width: 100px;
+          margin: 0 auto;
+          h2 {
+            font-family: $font-pingfang;
+            font-size: 18px;
+            font-weight: bold;
+            letter-spacing: 1px;
           }
-          span {
-            font-family: $font-dosis;
-            font-size: 16px;
-            font-weight: normal;
+
+          .percent {
+            margin-bottom: 10px;
+
+            svg {
+              width: 15px;
+              vertical-align: middle;
+              position: relative;
+              top: -2px;
+            }
+
+            span {
+              font-family: $font-dosis;
+              font-size: 16px;
+              font-weight: normal;
+            }
           }
         }
+
         .data-up {
           color: $dataUpColor;
         }
+
         .data-down {
           color: $dataDownColor;
         }
+
         .arrow-down {
           transform: rotate(180deg);
         }
@@ -184,22 +221,26 @@ body {
           color: #787878;
           font-family: $font-dosis;
           font-size: 23px;
-          letter-spacing: 1px;
+
           .exchange_1 {
             margin: 0 0 20px 0;
           }
+
           .sync-icon {
             width: 20px;
             margin: 0 auto 20px;
           }
-          .sync-icon svg:hover{
+
+          .sync-icon svg:hover {
             transform: rotate(180deg);
             transition: all 1s ease;
           }
+
           .rmb {
             color: #2484f1;
             font-size: 17px;
             margin: 0;
+
             span {
               margin-left: 8px;
               font-size: 23px;
@@ -209,14 +250,17 @@ body {
         }
       }
     }
+
     .item-exchange_money:last-child {
       margin-right: 0;
     }
   }
+
   // 进度卡片
   .item-progress {
     width: 20%;
     position: relative;
+
     .item-progress_container {
       position: absolute;
       top: 50%;
@@ -225,20 +269,23 @@ body {
       width: 80%;
       font-family: $font-pingfang;
     }
+
     p {
       margin: 0;
     }
+
     .progress-container:not(:last-child) {
       margin-bottom: 30px;
     }
+
     .progress-bar {
       width: 70%;
       height: 5px;
     }
-    span{
+
+    span {
       font-size: 15px;
       margin-left: 10px;
     }
-    
   }
 }
